# Chute-Client

./: .gitignore  BUILDING.md  build.sh  cli.go  client.go  client_id.go  connection_manager.go  endpoints.go  fly.toml  go.mod  go.sum  main.go  network.go  peer_endpoint.go  rendezvous.go  session.go
app/: app.go  client.go  connection_manager.go  go.mod  go.sum  main.go  rendezvous.go  wails.json
app/ui/: index.html  package-lock.json  package.json  package.json.md5  styles.css  tsconfig.json
app/ui/scripts/: copy-html.js
app/ui/src/: chute_canvas.ts  renderer.ts
backend/: client.go  client_id.go  connection_manager.go  go.mod  go.sum  main.go  peer_endpoint.go  rendezvous.go  ui_server.go
frontend/: index.html  package-lock.json  package.json  renderer.js  tsconfig.json
frontend/src/: renderer.ts
frontend/src-tauri/: Cargo.toml  dev-server.js  tauri.conf.json
tests/: p2p_test.go
