[package]
name = "chute-gui"
version = "0.1.0"
description = "Chute GUI"
authors = ["Chute"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

